# Api-Enfermeria

./: .env  Cargo.toml
src/: main.rs
src/models/: enfermeras.rs  estudios.rs  familia.rs  mod.rs  pdf.rs  vivienda.rs
src/routes/: enfermeras.rs  estudios.rs  familia.rs  mod.rs  vivienda.rs
